--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
             <div class="control-grid">
                 <button onclick="resetCube()">重置</button>
                 <button onclick="scrambleCube()">打亂</button>
-                <button onclick="autoPlaytrigger()">自動操作</button>
+                <button onclick="autoPlaytrigger()">自動隨機旋轉</button>
             </div>
         </div>
          <div class="control-group">
