feat: texture mapping function

--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
         <div class="control-group">
             <h3>背景和方塊材質</h3>
             <button onclick="toggleBackground()">切換背景</button>
-            <button onclick="toggleReflection()">切換方塊反射效果</button>
+            <button onclick="toggleMaterialMode()">切換方塊材質</button>
         </div>
         <div class="control-group">
             <h3>說明</h3>
@@ -97,8 +97,9 @@
             <p class="text-xs text-gray-400">鍵盤快捷鍵 (Shift為逆時針): F, B, U, D, L, R</p>
             <p class="text-xs text-gray-400">鍵盤快捷鍵 C 可以切換視角</p>
             <p class="text-xs text-gray-400">鍵盤快捷鍵 B 可以切換背景<br> ( 純色或是Environment Cube Map ) </p>
-            <p class="text-xs text-gray-400">鍵盤快捷鍵 M 可以切換材質</p><br>
+            <p class="text-xs text-gray-400">鍵盤快捷鍵 T 可以切換材質<br> ( 純色、Reflection、Texture、Texture + Reflection )</p><br>
             <h3 class="text-xs text-gray-400">Author : Andy Lu</h3>
+            <h3 class="text-xs text-gray-400">Github : <a href="https://github.com/NaoCoding/glCube" target="_blank" class="text-blue-500">NaoCoding/glCube</a></h3>
         </div>
         
     </div>
