feat: minicubes for orbiting the main cube

--- a/index.html
+++ b/index.html
@@ -87,9 +87,12 @@
             <button onclick="toggleCameraMode()">切換視角</button>
         </div>
         <div class="control-group">
-            <h3>背景和方塊材質</h3>
+            <h3>背景和方塊材質和其他效果</h3>
             <button onclick="toggleBackground()">切換背景</button>
             <button onclick="toggleMaterialMode()">切換方塊材質</button>
+            <button onclick="window.toggleOrbitingCubes()" class="control-button">
+                環繞方塊
+              </button>
         </div>
         <div class="control-group">
             <h3>說明</h3>
